# TalentFinder-RAG

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  engine.py  main.py
backend/app/routes/: file_manager.py  index.py  search.py  system.py
backend/app/services/: file_manager.py
backend/scripts/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: style.css
frontend/src/components/: Header.vue  IngestProgress.vue  ResultAnalysis.vue  ResultCard.vue  SearchBar.vue
frontend/src/composables/: useMotorStatus.js  useSearch.js  useTheme.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: FileManager.vue  HomeView.vue
